--- a/PROJECT_1.html
+++ b/PROJECT_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>學習CSS好棒棒</title>
+    <title>蘋果一日最辣新聞</title>
 </head>
 <body>
     <h1>強尼戴普床上很亂 3P視訊傳全球</h1>
