--- a/PROJECT_1.html
+++ b/PROJECT_1.html
@@ -10,5 +10,6 @@
     <h1>強尼戴普床上很亂 3P視訊傳全球</h1>
     <h2>強尼戴普</h2>
     <p>54歲好萊塢男星「強哥」強尼戴普（Johnny Depp，右）為好友搖滾歌手瑪麗蓮曼森拍攝新歌《KILL4ME》MV，影片中他裸上身與2名女模上演激情床戲，曼森隨後也加入，大玩4P、女女吻與口交戲碼，尺度相當限制級。但網友卻不太買單，直呼強哥的舉止看了令人不舒服。翻攝MV</p>
+    <img src="https://img.appledaily.com.tw/images/twapple/640pix/20171116/EN08/EN08_003.jpg" alt="">
 </body>
 </html>
