--- a/PROJECT_2.html
+++ b/PROJECT_2.html
@@ -23,7 +23,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 </head>
-<body style="background:#">
+<body style="background:#EFEBD9">
     <h1>2017必去台南小酒館</h1>
 
 
